--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "weather_app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Oussidi1998.github.com/WeatherApp_React",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
@@ -11,6 +13,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
